# LowLevelFileManip

./: .gitignore  CMakeLists.txt  Ch13Challenge15Sol.sln  README.md
Ch13Challenge15/: Ch13Challenge15.vcxproj  Ch13Challenge15.vcxproj.filters  Ch13Challenge15Source.cpp  inventory.cpp
include/: inventory.h
src/: inventory.cpp  main.cpp
